--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
   </head>
 
-  <body>
+  <body ng-app="app">
 
-            <div ng-app="app" ng-controller="Main as main" alighn="center">
+            <div ng-controller="Main as main" alighn="center">
  
                   <h1>Login</h1>
 
